fix TySh rasterization on psd export
